[package]
name = "actix_extract_multipart"
version = "1.2.0"
authors = ["Bréhaut Vincent <vincent.brehaut@gmail.com>"]
edition = "2021"
license = "MIT"
description = "ActixExtractMultipart is a library for parse actix_multipart into a structure that you defined"
repository = "https://github.com/KosekiDev/ActixExtractMultipart"
readme = "README.md"
keywords = ["actix", "multipart", "web"]

[lib]
name = "actix_extract_multipart"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
actix-multipart = "0.4.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.73"
futures = "0.3.14"
futures-util = "0.3.17"

[dev-dependencies]
actix-rt = "2.2"
actix-http = "3.0.0-beta.6"
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"
futures-core = { version = "0.3.7", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.7", default-features = false, features = ["alloc"] }