[package]
name = "exemple"
version = "0.1.0"
authors = ["KosekiDev <vincent.brehaut@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-multipart = "0.3.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
futures = "0.3.14"
actix_extract_multipart = "0.2.0"